Revert the text to the original at 0:4.3

--- a/tex/p000.tex
+++ b/tex/p000.tex
@@ -93,7 +93,7 @@
 \usection{Universe Reality}
 \vs p000 4:1 Reality differentially actualizes on diverse universe levels; reality originates in and by the infinite volition of the Universal Father and is realizable in three primal phases on many different levels of universe actualization:
 \vs p000 4:2 \ublistelem{1.}\bibnobreakspace \bibemph{Undeified reality} ranges from the energy domains of the nonpersonal to the reality realms of the nonpersonalizable values of universal existence, even to the presence of the Unqualified Absolute.
-\vs p000 4:3 \ublistelem{2.}\bibnobreakspace \bibemph{Deified reality} embraces all\fnc{In 1955 text: all of. \bibexpl{The committee decided that this revised phraseology is all-inclusive without implying any limitations and without requiring a change of tone.}} infinite Deity potentials ranging upward through all realms of personality from the lowest finite to the highest infinite, thus encompassing the domain of all that which is personalizable and more --- even to the presence of the Deity Absolute.
+\vs p000 4:3 \ublistelem{2.}\bibnobreakspace \bibemph{Deified reality} embraces all of infinite Deity potentials ranging upward through all realms of personality from the lowest finite to the highest infinite, thus encompassing the domain of all that which is personalizable and more --- even to the presence of the Deity Absolute.
 \vs p000 4:4 \ublistelem{3.}\bibnobreakspace \bibemph{Interassociated reality.} Universe reality is supposedly either deified or undeified, but to subdeified beings there exists a vast domain of interassociated reality, potential and actualizing, which is difficult of identification. Much of this co\hyp{}ordinate reality is embraced within the realms of the Universal Absolute.
 \vs p000 4:5 This is the primal concept of original reality: The Father initiates and maintains Reality. The primal \bibemph{differentials} of reality are the deified and the undeified --- the Deity Absolute and the Unqualified Absolute. The primal \bibemph{relationship} is the tension between them. This Father\hyp{}initiated divinity\hyp{}tension is perfectly resolved by, and eternalizes as, the Universal Absolute.
 \vs p000 4:6 \pc From the viewpoint of time and space, reality is further divisible as:
