Attach the notes more accurately and shorten them

--- a/tex/p011.tex
+++ b/tex/p011.tex
@@ -62,7 +62,7 @@
 \vs p011 7:4 \pc Space is neither a subabsolute condition within, nor the presence of, the Unqualified Absolute, neither is it a function of the Ultimate. It is a bestowal of Paradise, and the space of the grand universe and that of all outer regions is believed to be actually pervaded by the ancestral space potency of the Unqualified Absolute. From near approach to peripheral Paradise, this pervaded space extends horizontally outward through the fourth space level and beyond the periphery of the master universe, but how far beyond we do not know.
 \vs p011 7:5 If you imagine a finite, but inconceivably large, V\hyp{}shaped plane situated at right angles to both the upper and lower surfaces of Paradise, with its point nearly tangent to peripheral Paradise, and then visualize this plane in elliptical revolution about Paradise, its revolution would roughly outline the volume of pervaded space.
 \vs p011 7:6 There is an upper and a lower limit to horizontal space with reference to any given location in the universes. If one could move far enough at right angles to the plane of Orvonton, either up or down, eventually the upper or lower limit of pervaded space would be encountered. Within the known dimensions of the master universe these limits draw farther and farther apart at greater and greater distances from Paradise; space thickens, and it thickens somewhat faster than does the plane of creation, the universes.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/space-functions.pdf}\caption{Space Functions of Paradise}\end{figure}}
-\vs p011 7:7 \pc The relatively quiet zones between the space levels, such as the one separating the seven superuniverses from the first outer space level, are enormous elliptical regions of quiescent space activities. These zones separate the vast galaxies which race around Paradise in orderly procession. You may visualize the first outer space level, where untold universes are now in process of formation, as a vast procession of galaxies swinging around Paradise, bounded above and below by the midspace zones of quiescence and bounded on the inner and outer margins by relatively quiet space zones.\fnc{The relatively quiet \bibtextul{zone} between the space levels,\ldots{} \bibexpl{The plural, found in all editions after 1955, agrees with the verb “are” and is otherwise consistent with the general sense of the paragraph.}}
+\vs p011 7:7 \pc The relatively quiet zones\fnc{In 1955 text ``zone'' in singular, disagreeing with the verb ``are'' that follows.} between the space levels, such as the one separating the seven superuniverses from the first outer space level, are enormous elliptical regions of quiescent space activities. These zones separate the vast galaxies which race around Paradise in orderly procession. You may visualize the first outer space level, where untold universes are now in process of formation, as a vast procession of galaxies swinging around Paradise, bounded above and below by the midspace zones of quiescence and bounded on the inner and outer margins by relatively quiet space zones.
 \vs p011 7:8 A space level thus functions as an elliptical region of motion surrounded on all sides by relative motionlessness. Such relationships of motion and quiescence constitute a curved space path of lessened resistance to motion which is universally followed by cosmic force and emergent energy as they circle forever around the Isle of Paradise.
 \vs p011 7:9 This alternate zoning of the master universe, in association with the alternate clockwise and counterclockwise flow of the galaxies, is a factor in the stabilization of physical gravity designed to prevent the accentuation of gravity pressure to the point of disruptive and dispersive activities. Such an arrangement exerts antigravity influence and acts as a brake upon otherwise dangerous velocities.
 \usection{Paradise Gravity}
