--- a/tex/p028.tex
+++ b/tex/p028.tex
@@ -65,11 +65,11 @@
 \vs p028 6:1 In the same manner as their fellows, these angels are created serially and in seven reflective types, but these types are not assigned individually to the separate services of the superuniverse administrators. All tertiary seconaphim are collectively assigned to the Trinitized Sons of Attainment, and these ascendant sons use them interchangeably; that is, the Mighty Messengers can and do utilize any of the tertiary types, and so do their co\hyp{}ordinates, Those High in Authority and Those without Name and Number. These seven types of tertiary seconaphim are:
 \vs p028 6:2 \ublistelem{1.}\bibnobreakspace \bibemph{The Significance of Origins.} The ascendant Trinitized Sons of a superuniverse government are charged with the responsibility of dealing with all issues growing out of the origin of any individual, race, or world; and the significance of origin is the paramount question in all our plans for the cosmic advancement of the living creatures of the realm. All relationships and the application of ethics grow out of the fundamental facts of origin. Origin is the basis of the relational reaction of the Gods. Always does the Conjoint Actor “take note of the man, in what manner he was born.”
 \vs p028 6:3 With the higher descendant beings, origin is simply a fact to be ascertained; but with the ascending beings, including the lower orders of angels, the nature and circumstances of origin are not always so clear, though of equally vital importance at almost every turn of universe affairs --- hence the value of having at our disposal a series of reflective seconaphim who can instantly portray anything required respecting the genesis of any being in either the central universe or throughout the entire realm of a superuniverse.
-\vs p028 6:4 The Significances of Origins are the living ready\hyp{}reference genealogies of the vast hosts of beings --- men, angels, and others --- who inhabit the seven superuniverses. They are always ready to supply their superiors with an up\hyp{}to\hyp{}date, replete, and trustworthy estimate of the ancestral factors and the current actual status of any individual on any world of their respective superuniverses; and their computation of possessed facts is always up to the minute.\fnc{The \bibtextul{Significance} of Origins are the living ready-reference genealogies\ldots{} \bibexpl{The plural is required to agree with the verb “are,” and its construction is paralleled by the formation of the plural Discerner(s) of Spirits in a similar setting at \bibref[28:5.20]{p028 5:20} in the text. The structure of the plural as a whole is confused by the plural form of the last word in the singular of the name.}}
+\vs p028 6:4 The Significances\fnc{In 1955 text ``Significance'' in the singular, disagreeing with the verb ``are'' that follows.} of Origins are the living ready\hyp{}reference genealogies of the vast hosts of beings --- men, angels, and others --- who inhabit the seven superuniverses. They are always ready to supply their superiors with an up\hyp{}to\hyp{}date, replete, and trustworthy estimate of the ancestral factors and the current actual status of any individual on any world of their respective superuniverses; and their computation of possessed facts is always up to the minute.
 \vs p028 6:5 \ublistelem{2.}\bibnobreakspace \bibemph{The Memory of Mercy.} These are the actual, full and replete, living records of the mercy which has been extended to individuals and races by the tender ministrations of the instrumentalities of the Infinite Spirit in the mission of adapting the justice of righteousness to the status of the realms, as disclosed by the portrayals of the Significance of Origins. The Memory of Mercy discloses the moral debt of the children of mercy --- their spiritual liabilities --- to be set down against their assets of the saving provision established by the Sons of God. In revealing the Father’s pre\hyp{}existent mercy, the Sons of God establish the necessary credit to ensure the survival of all. And then, in accordance with the findings of the Significance of Origins, a mercy credit is established for the survival of each rational creature, a credit of lavish proportions and one of sufficient grace to ensure the survival of every soul who really desires divine citizenship.
 \vs p028 6:6 The Memory of Mercy is a living trial balance, a current statement of your account with the supernatural forces of the realms. These are the living records of mercy ministration which are read into the testimony of the courts of Uversa when each individual’s right to unending life comes up for adjudication, when “thrones are cast up and the Ancients of Days are seated. The broadcasts of Uversa issue and come forth from before them; thousands upon thousands minister to them, and ten thousand times ten thousand stand before them. The judgment is set, and the books are opened.” And the books which are opened on such a momentous occasion are the living records of the tertiary seconaphim of the superuniverses. The formal records are on file to corroborate the testimony of the Memories of Mercy if they are required.
 \vs p028 6:7 The Memory of Mercy must show that the saving credit established by the Sons of God has been fully and faithfully paid out in the loving ministry of the patient personalities of the Third Source and Centre. But when mercy is exhausted, when the “memory” thereof testifies to its depletion, then does justice prevail and righteousness decree. For mercy is not to be thrust upon those who despise it; mercy is not a gift to be trampled under foot by the persistent rebels of time. Nevertheless, though mercy is thus precious and dearly bestowed, your individual drawing credits are always far in excess of your ability to exhaust the reserve if you are sincere of purpose and honest of heart.
-\vs p028 6:8 \pc The mercy reflectors, with their tertiary associates, engage in numerous superuniverse ministries, including the teaching of the ascending creatures. Among many other things the Significances of Origins teach these ascenders how to apply spirit ethics, and following such training, the Memories of Mercy teach them how to be truly merciful. While the spirit techniques of mercy ministry are beyond your concept, you should even now understand that mercy is a quality of growth. You should realize that there is a great reward of personal satisfaction in being first just, next fair, then patient, then kind. And then, on that foundation, if you choose and have it in your heart, you can take the next step and really show mercy; but you cannot exhibit mercy in and of itself. These steps must be traversed; otherwise there can be no genuine mercy. There may be patronage, condescension, or charity --- even pity --- but not mercy. True mercy comes only as the beautiful climax to these preceding adjuncts to group understanding, mutual appreciation, fraternal fellowship, spiritual communion, and divine harmony.\fnc{\ldots{}the \bibtextul{Significance} of Origins teach these ascenders\ldots{} \bibexpl{Same explanation as \bibref[28:6.4]{p028 6:4} above}}
+\vs p028 6:8 \pc The mercy reflectors, with their tertiary associates, engage in numerous superuniverse ministries, including the teaching of the ascending creatures. Among many other things the Significances\fnc{In 1955 text ``Significance'' in the singular, disagreeing with the verb ``teach'' that follows, similarly to \bibref[28:6.4]{p028 6:4}.} of Origins teach these ascenders how to apply spirit ethics, and following such training, the Memories of Mercy teach them how to be truly merciful. While the spirit techniques of mercy ministry are beyond your concept, you should even now understand that mercy is a quality of growth. You should realize that there is a great reward of personal satisfaction in being first just, next fair, then patient, then kind. And then, on that foundation, if you choose and have it in your heart, you can take the next step and really show mercy; but you cannot exhibit mercy in and of itself. These steps must be traversed; otherwise there can be no genuine mercy. There may be patronage, condescension, or charity --- even pity --- but not mercy. True mercy comes only as the beautiful climax to these preceding adjuncts to group understanding, mutual appreciation, fraternal fellowship, spiritual communion, and divine harmony.
 \vs p028 6:9 \ublistelem{3.}\bibnobreakspace \bibemph{The Import of Time.} Time is the one universal endowment of all will creatures; it is the “one talent” entrusted to all intelligent beings. You all have time in which to ensure your survival; and time is fatally squandered only when it is buried in neglect, when you fail so to utilize it as to make certain the survival of your soul. Failure to improve one’s time to the fullest extent possible does not impose fatal penalties; it merely retards the pilgrim of time in his journey of ascent. If survival is gained, all other losses can be retrieved.
 \vs p028 6:10 In the assignment of trusts the counsel of the Imports of Time is invaluable. Time is a vital factor in everything this side of Havona and Paradise. In the final judgment before the Ancients of Days, time is an element of evidence. The Imports of Time must always afford testimony to show that every defendant has had ample time for making decisions, achieving choice.
 \vs p028 6:11 These time evaluators are also the secret of prophecy; they portray the element of time which will be required in the completion of any undertaking, and they are just as dependable as indicators as are the frandalanks and chronoldeks of other living orders. The Gods foresee, hence foreknow; but the ascendant authorities of the universes of time must consult the Imports of Time to be able to forecast events of the future.
