Cleanup the typeface handling and switching

--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -2,32 +2,18 @@
 \thispagestyle{empty}
 \bibmark{book}{INTRODUCTION}
 \fancyhead[C]{\bibheadfont INTRODUCTION}
-
 \makeatletter
 \bib@raise@anchor{\bibpdfbookmark[0]{Introduction}{Intr}}%
 \makeatother
 
-\begin{center}
-\bibpapertitlefont
-INTRODUCTION
-\end{center}
-
-\tunemarkup{pghanlin}{\fontsize{16}{19}\selectfont}
-\tunemarkup{pgkobomini}{\fontsize{16}{19}\selectfont}
-\tunemarkup{pgkindledx}{\fontsize{17}{21}\selectfont}
-\tunemarkup{pgafour}{\fontsize{16}{19}\selectfont}
-\tunemarkup{pgnexus7}{\fontsize{15}{18}\selectfont}
-\tunemarkup{pgthinmob}{\fontsize{15}{18}\selectfont}
-\tunemarkup{pgnexus10}{\fontsize{17}{19}\selectfont}
-\tunemarkup{pgkoboaurahd}{\fontsize{16}{18}\selectfont}
-\tunemarkup{pgauraone}{\bibbookend}
-\tunemarkup{pgcrownq}{\fontsize{14}{17}\selectfont}
+\begin{center}\bibpapertitlefont INTRODUCTION\end{center}
+\introfontsize
 
 The purpose of the Fifth Epochal Revelation is to expand cosmic consciousness and enhance spiritual perception.
-The high ideal and example of the life of Jesus is needed especially today,
+The high ideals and the example of the life of Jesus are especially needed today,
 in the times of planetary crisis and pandemia of fear and madness, caused by intellectual ignorance and spiritual blindness.
 
-The technical peculiarities of \bibemph{The British Study Edition of The Urantia Papers} are as follows:
+\bibemph{The British Study Edition of The Urantia Papers} has the following distinct features:
 
 \begin{itemize}
 \item The present text of \bibemph{The Urantia Papers} is based on that of the Fifth Epochal Revelation,
@@ -51,28 +37,26 @@ Well, those ``few short years'' have come to pass and it now devolves upon us --
 expand and fearlessly continue the living stream of the Fifth Epochal Revelation:
 ``My Father worketh hitherto, and I work'' (John~5:17).
 
-Realizing the great importance of this text, I and a group of others have carefully preserved
+Realizing the great importance of this text, a group of volunteers and I have carefully preserved
 the original First Edition (1955) of the Urantia Papers, known at the time as \bibemph{The Urantia Book,}
 and made it available on my website in both electronic and printed forms:
-\begin{center}
-\myurl{http://www.bibles.org.uk/guardian-plates.html}
-\end{center}
+\begin{center}\myurl{http://www.bibles.org.uk/guardian-plates.html}\end{center}
 For deriving the etymology of the words coined by the revelators, I acknowledge the use of the notes by Dr~Chris Halvorson.
 I am grateful to my friends Jim George and Mitch Austin for their helpful suggestions and comments,
 some of which have been incorporated into the study notes of the present edition.
 I would like to thank Irina Chernova for creating illustrations for this edition.
 For information on the human sources, upon which this Revelation is based, I am indebted almost entirely to the outstanding
-research work by Matthew Block, published on his website:
-\begin{center}
-\myurl{https://urantiabooksources.com/}
-\end{center}
-Only a few of the sources related to the scientific papers have been discovered by myself independently.
+research work by Matthew Block as published on his website:
+\begin{center}\myurl{https://urantiabooksources.com/}\end{center}
+A few of the sources related to the material of the Revelation related to the physical sciences have been discovered by myself
+independently.
 
-Last, but not least, I am deeply grateful to Troy R.~Bishop, whom I am honoured to call my mentor and dear friend.
+Last but not least I am deeply grateful to Troy R.~Bishop, whom I am honoured to call my mentor and dear friend.
 
 \tunemarkuptwo{noquiz}{}{%
 This PDF file also includes the interactive quiz (\totalcurqs\ questions in total) called \bibemph{The Cosmic Citizenship Quiz}.
-To use the quiz simply click on the symbol \quizsymbol\ at the end of any Paper or click on the title of any Paper in the text section.
+To use the quiz simply click on the symbol \quizsymbol\ at the end of any Paper or click on the title
+of any Paper in the text section.
 Clicking on the Paper's title in the quiz section will return you back to that Paper in the text section.
 }
 
