--- a/tex/title.tex
+++ b/tex/title.tex
@@ -12,40 +12,9 @@
 \vspace*{\stretch{0.1}}
 \begin{center}
 {
-\bibcovertitlefont
-\tunemarkup{pgcrownq}{\fontsize{25}{34}\selectfont}
-\tunemarkup{pgafour}{\fontsize{27}{34}\selectfont}
-\tunemarkup{pgkindledx}{\fontsize{20.8}{32}\selectfont}
-\tunemarkup{pghanlin}{\fontsize{12}{20}\selectfont}
-\tunemarkup{pgkobomini}{\fontsize{14}{20}\selectfont}
-\tunemarkup{pgnexus7}{\fontsize{13.5}{20}\selectfont}
-\tunemarkup{pgthinmob}{\fontsize{13.5}{20}\selectfont}
-\tunemarkup{pgnexus10}{\fontsize{17.3}{28}\selectfont}
-\tunemarkup{pgkoboaurahd}{\fontsize{15}{20}\selectfont}
-\tunemarkup{pgauraone}{\fontsize{16.5}{20}\selectfont}
-THE BRITISH \tunemarkuptwo{nofnt}{TEXT}{STUDY} EDITION\\
-\tunemarkup{pgcrownq}{\fontsize{24}{34}\selectfont}
-\tunemarkup{pgafour}{\fontsize{24}{34}\selectfont}
-\tunemarkup{pgkindledx}{\fontsize{16.5}{32}\selectfont}
-\tunemarkup{pghanlin}{\fontsize{9}{20}\selectfont}
-\tunemarkup{pgkobomini}{\fontsize{10}{20}\selectfont}
-\tunemarkup{pgnexus7}{\fontsize{10}{20}\selectfont}
-\tunemarkup{pgthinmob}{\fontsize{10}{20}\selectfont}
-\tunemarkup{pgnexus10}{\fontsize{14}{28}\selectfont}
-\tunemarkup{pgkoboaurahd}{\fontsize{12}{20}\selectfont}
-\tunemarkup{pgauraone}{\fontsize{12}{20}\selectfont}
-OF\\
-\tunemarkup{pgcrownq}{\fontsize{30}{38}\selectfont}
-\tunemarkup{pgafour}{\fontsize{34}{38}\selectfont}
-\tunemarkup{pgkindledx}{\fontsize{25}{32}\selectfont}
-\tunemarkup{pghanlin}{\fontsize{9}{20}\selectfont}
-\tunemarkup{pgkoboaurahd}{\fontsize{20}{23}\selectfont}
-\tunemarkup{pgauraone}{\fontsize{20}{22}\selectfont}
-\tunemarkup{pgkobomini}{\fontsize{16.6}{20}\selectfont}
-\tunemarkup{pgnexus7}{\fontsize{16}{20}\selectfont}
-\tunemarkup{pgthinmob}{\fontsize{16}{20}\selectfont}
-\tunemarkup{pgnexus10}{\fontsize{23}{30}\selectfont}
-\urantiapapers\\
+\booktitlefontsize THE BRITISH \tunemarkuptwo{nofnt}{TEXT}{STUDY} EDITION\\
+\offontsize OF\\
+\booksubtitlefontsize THE URANTIA PAPERS\\
 }%
 {%
 \vspace*{\stretch{0.1}}
@@ -105,8 +74,12 @@ The text of \bibemph{The Urantia Papers} is in the public domain.}\\[5pt]
 The latest version of this book can be downloaded from:\\
 {\upshape\bfseries http://www.bibles.org.uk}\\
 Please send all comments to: {\makeatletter\upshape\bfseries aivazian.tigran@gmail.com\makeatother}\\[1ex]
-\tunemarkuptwo{pgafour}{}{\small}\tux\ Typeset with \XeLaTeX\ of \TeX\ Live 2017 under Linux.\\
-Text set in \textbf{\itshape\tunemarkup{minionpro}{Adobe }\tunemarkup{garamond}{Adobe }\tunemarkup{arno}{Adobe }\tunemarkup{academy}{ParaType }\urantiamainfont} at \urantiamainfontsize pt.\\[18pt]
+\tunemarkuptwo{pgafour}{}{\small}\tux\ Typeset with \XeLaTeX\ of \TeX\ Live 2020 under Linux.\\
+English text set in {\bfseries\tunemarkup{garamond}{Adobe }\urantiamainfont\tunemarkup{garamond}{ Opticals}} at \urantiamainfontsize pt.\\
+Hebrew text set in {\bfseries\hebrewfontname.}\\
+Greek text set in {\bfseries\greekfontname.}\\
+Armenian text set in {\bfseries Tarumian GrqiBardzr.}\\
+Chinese text set in \textbf{\itshape\chinesefontname.}\\[10pt]
 \upshape\small\tunemarkup{pgcrownq}{\large}\tunemarkup{pgafour}{\Large}\bfseries PDF version: \tunemarkup{pgthinmob}{20:9 Colour}\tunemarkup{pgcrownq}{Crown Quarto}\tunemarkup{pgafour}{A4}\tunemarkup{pgnexus7}{7" Colour}\tunemarkup{pgnexus10}{10" Colour}\tunemarkup{pghanlin}{6" eInk}\tunemarkup{pgkobomini}{5" eInk}\tunemarkup{pgkoboaurahd}{7" eInk}\tunemarkup{pgkindledx}{10" eInk}\tunemarkup{pgauraone}{8" eInk}\\
 \upshape\bfseries PDF date: \mytoday{}\\
 }
