--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -69,24 +69,25 @@
 
 \renewcommand{\r}{\kern2pt\raisebox{1.5ex}{\circle{2}}}
 
+\def\urantiaheadingfont{Arial Narrow Bold}
+\def\urantiaparttitlefont{GoudyHandtooled BT}
+\def\hebrewfontname{SBL Hebrew}
+\def\greekfontname{SBL Greek}
+\def\armenianfontname{ArTarumianGrqiBardzr_U}
+\def\chinesefontname{Code2000}
+
 \tunemarkup{basker}{%
 \def\urantiamainfont{Baskerville 10 Pro}
-\def\urantiaparttitlefont{GoudyHandtooled BT}
 \def\urantiaauthorfont{Baskerville 10 Pro}
 \def\urantiatitlefont{Baskerville 10 Pro}
 \def\urantiaheaderfont{Baskerville 10 Pro}
-\def\urantiaheadingfont{Arial Narrow Bold}
-\def\urantiaexplfont{Baskerville 10 Pro}
 }
 
 \tunemarkup{garamond}{%
 \def\urantiamainfont{Garamond Premier Pro}
-\def\urantiaparttitlefont{GoudyHandtooled BT}
 \def\urantiaauthorfont{PF DaVinci Script Pro}
 \def\urantiatitlefont{Garamond Premier Pro Semibold Display}
 \def\urantiaheaderfont{Garamond Premier Pro Medium Caption}
-\def\urantiaheadingfont{Arial Narrow Bold}
-\def\urantiaexplfont{Garamond Premier Pro Medium Italic}
 }
 
 % Samsung Galaxy A70 20:9 aspect ratio
@@ -135,7 +136,6 @@
 \newfontfamily\sectiontitlefont[WordSpace=2.0,Letters=Uppercase,Mapping=tex-text]{\urantiaheaderfont}
 \newfontfamily\headingfont[LetterSpace=1.2,WordSpace=1.2,Mapping=tex-text]{\urantiaheadingfont}
 \newfontfamily\authorfontfamily[Mapping=tex-text]{\urantiaauthorfont}
-\newfontfamily\explfont[Mapping=tex-text]{\urantiaexplfont}
 
 %\newfontfamily\captionfont[Mapping=tex-text]{Linux Libertine O}
 \DeclareCaptionFormat{capfont}{\captionfont\large#1#2#3}
@@ -243,7 +243,7 @@
 \newcommand{\separatorshort}{\begin{center}*\ *\ *\end{center}}
 
 \newcommand{\bibtextul}[1]{\uline{#1}}
-\newcommand{\bibexpl}[1]{{\explfont #1}}
+\newcommand{\bibexpl}[1]{#1}
 \providecommand{\textlatin}[1]{{#1}}
 \renewcommand{\headrulewidth}{0pt}
 \renewcommand{\bibdropcapscolor}{ubred}
@@ -641,7 +641,6 @@
 
 \newcommand{\hsetoff}{\hspace*{1em}}
 \newcommand{\vsetspace}{\vspace{1ex}}
-\newcommand{\bibcovertitlefont}{\parttitlefont\fontsize{18}{18}\selectfont\addfontfeature{LetterSpace=4.5}}
 \protected\def\print@vssup#1{\makebox[0.9em][l]{\@textsuperscript{\fontsize{7}{7}\bfseries#1}}\kern0.4em\relax}
 
 \tunemarkuptwo{nofnt}{%
@@ -676,6 +675,10 @@
 \def\pc{{\fontsize{13}{13}\selectfont§§}\kern3pt}
 
 \tunemarkup{pgkobomini}{%
+\newcommand{\booktitlefontsize}{\parttitlefont\fontsize{14}{20}\selectfont}
+\newcommand{\offontsize}{\fontsize{10}{20}\selectfont}
+\newcommand{\booksubtitlefontsize}{\fontsize{16.6}{20}\selectfont}
+\newcommand{\introfontsize}{\fontsize{16}{19}\selectfont}
 \tolerance=9999
 \setcounter{DefaultLines}{2}
 \newcommand{\authorfont}{\authorfontfamily\fontsize{19}{9}\bfseries\itshape}%
@@ -696,7 +699,7 @@
 \renewcommand{\bibfnvssize}{\headerfont\large\bfseries}
 \newcommand{\titlesepbig}{{\usefont{U}{webo}{xl}{n}\Large ahb}}
 \newcommand{\subfont}{\fontsize{13}{16}\itshape}
-\newcommand{\parttitlefontsize}{\Large}
+\newcommand{\parttitlefontsize}{\parttitlefont\Large}
 \newcommand{\bibbookend}{\fontsize{18}{20}\selectfont}
 \newcommand{\urantiamainfontsize}{18/20}
 \renewcommand{\bibtocheadfont}{\addfontfeature{LetterSpace=1.2}\fontsize{13}{15}\bfseries}
@@ -706,6 +709,10 @@
 }
 
 \tunemarkup{pghanlin}{%
+\newcommand{\booktitlefontsize}{\parttitlefont\fontsize{12}{20}\selectfont}
+\newcommand{\offontsize}{\fontsize{9}{20}\selectfont}
+\newcommand{\booksubtitlefontsize}{\fontsize{9}{20}\selectfont}
+\newcommand{\introfontsize}{\fontsize{16}{19}\selectfont}
 \tolerance=9999
 \newcommand{\bibtocsuperheadfont}{\fontsize{13}{13}\selectfont}
 \newcommand{\bibheadpapersize}{\fontsize{8}{8}\selectfont}
@@ -723,7 +730,7 @@
 \renewcommand{\bibfnvssize}{\headerfont\large}
 \newcommand{\titlesepbig}{{\usefont{U}{webo}{xl}{n}\huge ahb}}
 \newcommand{\subfont}{\fontsize{10}{9}\itshape}
-\newcommand{\parttitlefontsize}{\large}
+\newcommand{\parttitlefontsize}{\parttitlefont\large}
 \renewcommand{\bibtocheadfont}{\addfontfeature{LetterSpace=1.2}\fontsize{14}{17}\bfseries}
 \renewcommand{\bibtocfont}{\fontsize{10}{17}\selectfont}
 \newcommand{\bibsectitlefont}{\sectiontitlefont\fontsize{8}{9}\selectfont}
@@ -733,6 +740,10 @@
 }
 
 \tunemarkup{pgkoboaurahd}{%
+\newcommand{\booktitlefontsize}{\parttitlefont\fontsize{15}{20}\selectfont}
+\newcommand{\offontsize}{\fontsize{12}{20}\selectfont}
+\newcommand{\booksubtitlefontsize}{\fontsize{20}{23}\selectfont}
+\newcommand{\introfontsize}{\fontsize{16}{18}\selectfont}
 \setcounter{DefaultLines}{2}
 \tolerance=3000
 \protected\def\print@vssup#1{\makebox[0.4em][l]{\@textsuperscript{\fontsize{7}{7}\bfseries#1}}\kern0.3em\relax}
@@ -751,9 +762,9 @@
 \definecolor{ublinkcolor}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubgreen}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubred}{rgb}{0.0, 0.0, 0.0}
-\newcommand{\titlesepbig}{{\usefont{U}{webo}{xl}{n}\huge ahb}}
+\newcommand{\titlesepbig}{{\usefont{U}{webo}{xl}{n}\Large ahb}}
 \newcommand{\subfont}{\fontsize{13}{17}\itshape}
-\newcommand{\parttitlefontsize}{\Large}
+\newcommand{\parttitlefontsize}{\parttitlefont\Large}
 \renewcommand{\bibtocheadfont}{\addfontfeature{LetterSpace=1.2}\fontsize{11}{11}\bfseries}
 \renewcommand{\bibtocfont}{\fontsize{7.7}{14}\selectfont}
 \newcommand{\bibsectitlefont}{\sectiontitlefont\fontsize{8}{8}\selectfont}
@@ -766,6 +777,9 @@
 }
 
 \tunemarkup{pgauraone}{%
+\newcommand{\booktitlefontsize}{\parttitlefont\fontsize{15}{20}\selectfont}
+\newcommand{\offontsize}{\fontsize{12}{20}\selectfont}
+\newcommand{\booksubtitlefontsize}{\fontsize{20}{22}\selectfont}
 \tolerance=3000
 \renewcommand{\numw}{0.07\linewidth}
 \renewcommand{\txtw}{0.85\linewidth}
@@ -784,9 +798,9 @@
 \definecolor{ubred}{rgb}{0.0, 0.0, 0.0}
 \renewcommand{\bibfnchapsize}{\headerfont\Large\bfseries}
 \renewcommand{\bibfnvssize}{\headerfont\large\bfseries}
-\newcommand{\titlesepbig}{{\usefont{U}{webo}{xl}{n}\huge ahb}}
+\newcommand{\titlesepbig}{{\usefont{U}{webo}{xl}{n}\Large ahb}}
 \newcommand{\subfont}{\fontsize{15}{18}\itshape}
-\newcommand{\parttitlefontsize}{\LARGE}
+\newcommand{\parttitlefontsize}{\parttitlefont\LARGE}
 \renewcommand{\bibtocheadfont}{\addfontfeature{LetterSpace=1.2}\fontsize{11}{11}\bfseries}
 \renewcommand{\bibtocfont}{\fontsize{7}{11}\selectfont}
 \newcommand{\bibsectitlefont}{\sectiontitlefont\fontsize{9.5}{10}\selectfont}
@@ -794,9 +808,14 @@
 \newcommand{\bibbookend}{\fontsize{18}{20}\selectfont}
 \newcommand{\urantiamainfontsize}{18/20}
 \newcommand{\authorfont}{\authorfontfamily\fontsize{25}{9}\bfseries\itshape}%
+\newcommand{\introfontsize}{\bibbookend}
 }
 
 \tunemarkup{pgnexus10}{%
+\newcommand{\booktitlefontsize}{\parttitlefont\fontsize{17.3}{28}\selectfont}
+\newcommand{\offontsize}{\fontsize{14}{28}\selectfont}
+\newcommand{\booksubtitlefontsize}{\fontsize{23}{30}\selectfont}
+\newcommand{\introfontsize}{\fontsize{17}{19}\selectfont}
 \tolerance=500
 \protected\def\print@vssup#1{\makebox[0.4em][l]{\@textsuperscript{\fontsize{7}{7}\bfseries#1}}\kern0.3em\relax}
 \setcounter{DefaultLines}{3}
@@ -807,7 +826,7 @@
 \definecolor{ubgreen}{rgb}{0.0, 0.4, 0.0}
 \definecolor{ubred}{rgb}{0.8, 0.0, 0.0}
 \definecolor{ublinkcolor}{rgb}{0.0, 0.3, 0.6}
-\newcommand{\titlesepbig}{{\usefont{U}{webo}{xl}{n}\huge\textcolor{ubblue}{ahb}}}
+\newcommand{\titlesepbig}{{\usefont{U}{webo}{xl}{n}\LARGE\textcolor{ubblue}{ahb}}}
 \newcommand{\bibpaperfont}{\titlefont\fontsize{14}{18}\selectfont}
 \newcommand{\bibpapertitlefont}{\titlefont\fontsize{16}{18}\selectfont}
 \newcommand{\bibtocsuperheadfont}{\fontsize{18}{20}\selectfont}
@@ -818,7 +837,7 @@
 \renewcommand{\bibheadversesize}{\fontsize{7}{7}\selectfont}
 \renewcommand{\bibheadpagesize}{\fontsize{8}{8}\selectfont}
 \newcommand{\subfont}{\fontsize{14}{17}\itshape}
-\newcommand{\parttitlefontsize}{\LARGE}
+\newcommand{\parttitlefontsize}{\parttitlefont\LARGE}
 \newcommand{\bibsectitlefont}{\sectiontitlefont\fontsize{11}{13}\selectfont}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
 \renewcommand{\subtitlefont}{\sectiontitlefont\fontsize{15}{19}\selectfont}
@@ -831,6 +850,10 @@
 }
 
 \tunemarkup{pgthinmob}{%
+\newcommand{\booktitlefontsize}{\parttitlefont\fontsize{13.5}{20}\selectfont}
+\newcommand{\offontsize}{\fontsize{10}{20}\selectfont}
+\newcommand{\booksubtitlefontsize}{\fontsize{16}{20}\selectfont}
+\newcommand{\introfontsize}{\fontsize{15}{18}\selectfont}
 \tolerance=9999
 \protected\def\print@vssup#1{\makebox[0.2em][r]{\@textsuperscript{\headerfont\fontsize{10}{10}\selectfont#1}}\kern0.2em\relax}
 \definecolor{ubpagecolor}{rgb}{0.0, 0.0, 0.2}
@@ -851,7 +874,7 @@
 \renewcommand{\bibheadversesize}{\fontsize{7}{7}\selectfont}
 \renewcommand{\bibheadpagesize}{\fontsize{8}{8}\selectfont}
 \newcommand{\subfont}{\fontsize{14}{17}\itshape}
-\newcommand{\parttitlefontsize}{\LARGE}
+\newcommand{\parttitlefontsize}{\parttitlefont\LARGE}
 \newcommand{\bibsectitlefont}{\sectiontitlefont\fontsize{9}{12}\selectfont}
 \renewcommand{\bibfnchapsize}{\headerfont\Large\bfseries}
 \renewcommand{\bibfnvssize}{\headerfont\large\bfseries}
@@ -863,6 +886,10 @@
 
 
 \tunemarkup{pgnexus7}{%
+\newcommand{\booktitlefontsize}{\parttitlefont\fontsize{13.5}{20}\selectfont}
+\newcommand{\offontsize}{\fontsize{10}{20}\selectfont}
+\newcommand{\booksubtitlefontsize}{\fontsize{16}{20}\selectfont}
+\newcommand{\introfontsize}{\fontsize{15}{18}\selectfont}
 \tolerance=9999
 \setcounter{DefaultLines}{2}
 \protected\def\print@vssup#1{\makebox[0.2em][r]{\@textsuperscript{\headerfont\fontsize{10}{10}\selectfont#1}}\kern0.2em\relax}
@@ -884,7 +911,7 @@
 \renewcommand{\bibheadversesize}{\fontsize{7}{7}\selectfont}
 \renewcommand{\bibheadpagesize}{\fontsize{8}{8}\selectfont}
 \newcommand{\subfont}{\fontsize{14}{17}\itshape}
-\newcommand{\parttitlefontsize}{\LARGE}
+\newcommand{\parttitlefontsize}{\parttitlefont\LARGE}
 \newcommand{\bibsectitlefont}{\sectiontitlefont\fontsize{9}{12}\selectfont}
 \renewcommand{\bibfnchapsize}{\headerfont\Large\bfseries}
 \renewcommand{\bibfnvssize}{\headerfont\large\bfseries}
@@ -895,6 +922,10 @@
 }
 
 \tunemarkup{pgafour}{%
+\newcommand{\booktitlefontsize}{\parttitlefont\fontsize{25.7}{34}\selectfont}
+\newcommand{\offontsize}{\fontsize{24}{34}\selectfont}
+\newcommand{\booksubtitlefontsize}{\fontsize{34}{38}\selectfont}
+\newcommand{\introfontsize}{\fontsize{16}{19}\selectfont}
 \tolerance=200
 \def\pc{{\fontsize{9}{0}\selectfont§§}\kern4pt}
 \setcounter{DefaultLines}{3}
@@ -910,7 +941,7 @@
 \renewcommand{\bibtocheadfont}{\addfontfeature{LetterSpace=1.2}\fontsize{17}{17}\selectfont}
 \renewcommand{\bibtocfont}{\fontsize{10.9}{14}\selectfont}
 \newcommand{\subfont}{\fontsize{16}{21}\itshape}
-\newcommand{\parttitlefontsize}{\fontsize{22}{26}\selectfont}
+\newcommand{\parttitlefontsize}{\parttitlefont\fontsize{22}{26}\selectfont}
 \renewcommand{\footnotesize}{\fontsize{12}{15}\selectfont}
 \newcommand{\bibbookend}{\fontsize{14}{17}\selectfont}
 \newcommand{\urantiamainfontsize}{14/17}
@@ -928,6 +959,9 @@
 }
 
 \tunemarkup{pgcrownq}{%
+\newcommand{\offontsize}{\parttitlefont\fontsize{24}{34}\selectfont}
+\newcommand{\booksubtitlefontsize}{\fontsize{30}{38}\selectfont}
+\newcommand{\introfontsize}{\fontsize{14}{17}\selectfont}
 \tolerance=9999
 \setcounter{DefaultLines}{2}
 \renewcommand{\authorfont}{\fontsize{10.1}{9}\bfseries\itshape}%
@@ -941,7 +975,7 @@
 \renewcommand{\bibtocheadfont}{\addfontfeature{LetterSpace=1.2}\fontsize{14}{14}\selectfont}
 \renewcommand{\bibtocfont}{\fontsize{12}{14}\selectfont}
 \newcommand{\subfont}{\fontsize{16}{18}\itshape}
-\newcommand{\parttitlefontsize}{\huge}
+\newcommand{\parttitlefontsize}{\parttitlefont\huge}
 \renewcommand{\footnotesize}{\fontsize{12}{14}\selectfont}
 \renewcommand{\bibbookend}{\fontsize{13.9}{16}\selectfont}
 \renewcommand{\urantiamainfontsize}{13.9/16}
@@ -959,6 +993,10 @@
 }
 
 \tunemarkup{pgkindledx}{%
+\newcommand{\booktitlefontsize}{\parttitlefont\fontsize{20.8}{32}\selectfont}
+\newcommand{\offontsize}{\fontsize{16.5}{32}\selectfont}
+\newcommand{\booksubtitlefontsize}{\fontsize{25}{32}\selectfont}
+\newcommand{\introfontsize}{\fontsize{17}{21}\selectfont}
 \tolerance=9999
 \renewcommand{\quizlink}{}
 \definecolor{ubblue}{rgb}{0.0, 0.0, 0.0}
@@ -971,7 +1009,7 @@
 \renewcommand{\bibtocheadfont}{\addfontfeature{LetterSpace=1.2}\fontsize{15}{15}\selectfont}
 \renewcommand{\bibtocfont}{\fontsize{10.8}{15}\selectfont}
 \newcommand{\subfont}{\fontsize{13}{15}\itshape}
-\newcommand{\parttitlefontsize}{\LARGE}
+\newcommand{\parttitlefontsize}{\parttitlefont\LARGE}
 \renewcommand{\footnotesize}{\fontspec[WordSpace={1.0,4.0,0.1},Mapping=tex-text]{\urantiamainfont}\fontsize{14}{16}\selectfont}
 \newcommand{\bibbookend}{\fontsize{17}{19}\selectfont}
 \newcommand{\urantiamainfontsize}{17/19}
@@ -1004,13 +1042,10 @@
 }%
 }
 
-%\newfontfamily\greekfont[Mapping=tex-text]{Galatia SIL}
-\newfontfamily\greekfont[Mapping=tex-text]{SBL Greek}
-%\newfontfamily\greekfont[Mapping=tex-text]{Minion Pro}
-%\newfontfamily\hebrewfont[Mapping=tex-text,Script=Hebrew]{Ezra SIL}
-\newfontfamily\hebrewfont[Mapping=tex-text,Script=Hebrew]{SBL Hebrew}
-\newfontfamily\armfont[Mapping=tex-text,Script=Armenian]{ArTarumianGrqiBardzr_U}
-\newfontfamily\chinesefont[Mapping=tex-text]{Code2000}
+\newfontfamily\greekfont[Mapping=tex-text]{\greekfontname}
+\newfontfamily\hebrewfont[Mapping=tex-text,Script=Hebrew]{\hebrewfontname}
+\newfontfamily\armfont[Mapping=tex-text,Script=Armenian]{\armenianfontname}
+\newfontfamily\chinesefont[Mapping=tex-text]{\chinesefontname}
 \newcommand{\textheb}[1]{{\hebrewfont#1}}
 \newcommand{\textarm}[1]{{\armfont#1}}
 \newcommand{\textgreek}[1]{{\greekfont#1}}
@@ -1019,7 +1054,6 @@
 
 \def\ackn{Acknowledgement}
 \def\continuedtxt{(continued)}
-\def\urantiapapers{THE URANTIA PAPERS}
 \def\papertxt{PAPER}
 \def\partitxt{PART I}
 \def\partiup{THE CENTRAL AND SUPERUNIVERSES}
@@ -1070,7 +1104,7 @@
   \vspace*{\stretch{0.1}}%
   \begin{center}%
   {%
-    \parttitlefont\parttitlefontsize
+    \parttitlefontsize
     \partitxt\\[1ex]
     \partiup\\[2ex]
   }%
@@ -1087,7 +1121,7 @@
   \vspace*{\stretch{0.1}}%
   \begin{center}%
   {%
-    \parttitlefont\parttitlefontsize
+    \parttitlefontsize
     \partiitxt\\[1ex]
     \partiiup\\[2ex]
   }%
@@ -1104,7 +1138,7 @@
   \vspace*{\stretch{0.1}}%
   \begin{center}%
   {%
-    \parttitlefont\parttitlefontsize
+    \parttitlefontsize
     \partiiitxt\\[1ex]
     \partiiiup\\[2ex]
   }%
@@ -1121,7 +1155,7 @@
   \vspace*{\stretch{0.1}}%
   \begin{center}%
   {%
-    \parttitlefont\parttitlefontsize
+    \parttitlefontsize
     \partivtxt\\[1ex]
     \partivup\\[2ex]
   }%
